# gb-case-2

./: .gitignore  Dockerfile  docker-compose.yaml  pyproject.toml
dags/: dbt_dag.py  import_base_files_to_bq_dag.py  scrap_twitter_dag.py
dags/dbt/: dbt_project.yml  profiles.yml
dags/dbt/models/: agg_vendas_ano_mes.sql  agg_vendas_marca_ano_mes.sql  agg_vendas_marca_linha.sql
dags/dbt/models/marts/: _core__models.yml  agg_vendas_linha_ano_mes.sql  vendas_ano_mes.sql  vendas_linha_ano_mes.sql  vendas_marca_ano_mes.sql  vendas_marca_linha.sql
dags/dbt/models/staging/base_vendas/: _base_vendas__docs.md  _base_vendas__models.yml  _base_vendas__sources.yml  stg_base_vendas__base_vendas.sql  stg_base_vendas__vendas.sql
