[tool.poetry]
name = "gb_case_2"
version = "0.1.0"
description = ""
authors = ["Nathan G N Gencissk nathangngencissk@gmail.com"]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.4.3"
fsspec = "^2022.5.0"
gcsfs = "^2022.5.0"
google-cloud-storage = "^2.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
